# Data-Aggregator

./: .gitignore  Query.sql  README.md  UserCategorySpent.sql  UserTotalSpentQuery.sql  pyproject.toml
data_aggregator/: settings.py  urls.py
data_processor/: models.py  schemas.py  urls.py  utils.py  views.py
data_processor/migrations/: 0001_initial.py  0002_alter_productsalesdata_price_and_more.py  0003_alter_productsalesdata_review_count.py  0004_alter_productsalesdata_review_count.py
users/: serializers.py  urls.py  views.py
