[tool.poetry]
name = "data aggregator"
version = "0.1.0"
description = ""
authors = ["CtrlPlusShift <thsibtima1999@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^24.8.19"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
ignore = ["E203", "W503", "W504"]
max-line-length = 88
exlcude = [".git", "__pycache__", "build", "dist", ".eggs"]
